none: implemented camera height for tessellation in ECS.